<resources>
    <string name="app_name">My_Application_Lab_5</string>
    <string name="TextImportantScreen">Telemedicine</string>
    <string name="TextButtonLogin">Login</string>
    <string name="TextLogin">Login</string>
    <string name="TextRegister">Register</string>
    <string name="TextUrgent">Urgent</string>
    <string name="TextVeryUrgent">Very Urgent</string>
    <string name="TextEmailAddress">Email Address</string>
    <string name="TextPassword">Password</string>
    <string name="TextSign_up">Sign Up</string>
    <string name="TextWelcome">Welcome</string>
    <string name="TextNext">Next</string>
    <string name="TextFullName">Full Name</string>
    <string name="TextName">Name</string>
    <string name="TextYourName">Your Name</string>
    <string name="TextYourFullName">Your Full Name</string>
    <string name="TextBirthday">Birthday</string>
    <string name="TextDateFormatBirthday">yyyy/mm/dd</string>
    <string name="TextAddress">Address</string>
    <string name="TextUserName">User Name</string>
    <string name="TextEmail">Email</string>
    <string name="TextYourEmail">Your Email</string>
    <string name="TextPhoneNumber">Phone Number</string>
    <string name="TextYourPhoneNumber">Your Phone Number</string>
    <string name="TextLocationAddress">Location/Address</string>
    <string name="TextLocation">Location</string>
    <string name="TextWhereLocation">Where your location</string>
    <string name="TextAddPhoto">Add photo</string>
    <string name="TextYourLocation">Your Location</string>
    <string name="TextWelcomePage">Lorem ipsum dolor sit amet, conse ctetur adipiscing elit, t.
        Ut enim ad veni am, quis nostrud exercitation ullamco</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="TextDisease">Disease</string>
    <string name="TextWhatDisease">What is your illness</string>
    <string name="TextDescriptionOptional">Description (Optional)</string>
    <string name="TextDescribe">Describe here</string>
    <string name="TextRequest">Request</string>
    <string name="TextDoctorList">Doctor list</string>
    <string name="TextDoctorDetails">Doctor details</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_profile">Profile</string>
    <string name="TextShortDescription">Short Description</string>
    <string name="google_maps_key">AIzaSyBUEVFAZxjH-N9gEVyvYtaVMq5YKplzl24</string>
    <string name="TextYourRequest">Your request has been approved</string>
    <string name="TextRequestDetails">Request Details</string>
    <string name="TextDoctor">Doctor</string>
    <string name="TextConfirm">Confirm</string>
    <string name="TextCancelRequest">Cancel request</string>
    <string name="TextDescription">Description</string>
</resources>
