<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_principal"
    android:theme="@android:style/Theme.NoTitleBar"
    tools:context=".WelcomeActivity"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/TextWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="97dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="20dp"
        android:text="@string/TextWelcome"
        android:textAllCaps="false"
        android:textColor="@color/colorWhiteText"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/TextWelcomeDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/TextWelcomeDescription"
        android:layout_width="317dp"
        android:layout_height="75dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/TextWelcomePage"
        android:textAllCaps="false"
        android:textColor="@color/colorWhiteText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextWelcome" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/sign_up_button_rounded"
        android:text="@string/TextSign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorGreenText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextWelcomeDescription" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/login_button_rounded"
        android:text="@string/TextLogin"
        android:textAllCaps="false"
        android:textColor="@color/colorWhiteText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonUrgent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonUrgent"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorTransparent"
        android:text="@string/TextUrgent"
        android:textAllCaps="true"
        android:textColor="@color/colorWhiteText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>