<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Example.RequestActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/idToolbarRequest"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_principal"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/toolbarTitleRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/TextRequest"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="17sp"
            android:textStyle="bold">

        </android.support.v7.widget.AppCompatTextView>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/idScrollViewRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/idToolbarRequest">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/idConstraintLayoutRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/idScrollViewRequest">

            <TextView
                android:id="@+id/textViewNameHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="299dp"
                android:layout_marginBottom="10dp"
                android:text="@string/TextName"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/editTextYourName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextYourName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="44dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/TextYourName"
                android:inputType="textPersonName"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@+id/textViewDisease"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNameHome" />

            <TextView
                android:id="@+id/textViewDisease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="284dp"
                android:layout_marginBottom="10dp"
                android:text="@string/TextDisease"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/editTextDisease"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextYourName" />

            <EditText
                android:id="@+id/editTextDisease"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/TextWhatDisease"
                app:layout_constraintBottom_toTopOf="@+id/textViewLocationHome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDisease" />

            <TextView
                android:id="@+id/textViewLocationHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="277dp"
                android:layout_marginBottom="10dp"
                android:text="@string/TextLocation"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/editTextWhereLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDisease" />

            <EditText
                android:id="@+id/editTextWhereLocation"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/TextWhereLocation"
                android:inputType="textPostalAddress"
                app:layout_constraintBottom_toTopOf="@+id/textViewDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLocationHome" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="257dp"
                android:layout_marginBottom="10dp"
                android:text="@string/TextDescription"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextWhereLocation" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="324dp"
                android:layout_height="94dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/TextDescribe"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/navigation"
        layout="@layout/element_bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>